fix(selectManyList): click on white space
* add a test
* set width of filter input field to zero as intended

Issue: TOBAGO-2279

--- a/tobago-theme/src/main/scss/_tobago.scss
+++ b/tobago-theme/src/main/scss/_tobago.scss
@@ -279,6 +279,7 @@ $tobago-flex-layout-spacing: 0.5rem;
       &:read-only {
         width: 0;
         min-width: 0;
+        flex-grow: 0;
       }
     }
   }
